# ML_projects

./: README.md
Evasion/: Description  atttacks.py  evaluation.py  main.py  model.py  train.py  utils.py
IAD/: Boosting_Clustering.ipynb  Feed-Forward Network.ipynb  Gradient_Descend.ipynb  KNN_LinReg.ipynb  Numpy.ipynb  Pandas.ipynb  Scoring_VLM.ipynb  Texts_Classification.ipynb  Trees_RandomForest_Bagging.ipynb  Work with images.ipynb
NeuralNet/: CMakeLists.txt  Description  Makefile
NeuralNet/source/: game_neural_net.cpp  game_neural_net.hpp  main.cpp  neural_net.cpp  neural_net.hpp
